@@ -1,29 +1,50 @@
 __doc__ = """External interface to the BeautifulSoup HTML parser.
 """
 
-__all__ = ["parse", "convert_tree"]
+__all__ = ["fromstring", "parse", "convert_tree"]
 
 from lxml import etree, html
 from BeautifulSoup import \
      BeautifulSoup, Tag, Comment, ProcessingInstruction, NavigableString
 
 
+def fromstring(data, beautifulsoup=None, makeelement=None):
+    """Parse a string of HTML data into an Element tree using the
+    BeautifulSoup parser.
+
+    Returns the root ``<html>`` Element of the tree.
+
+    You can pass a different BeautifulSoup parser through the
+    `beautifulsoup` keyword, and a diffent Element factory function
+    through the `makeelement` keyword.  By default, the standard
+    ``BeautifulSoup`` class and the default factory of `lxml.html` are
+    used.
+    """
+    return _parse(data, beautifulsoup, makeelement)
+
 def parse(file, beautifulsoup=None, makeelement=None):
-    if beautifulsoup is None:
-        beautifulsoup = BeautifulSoup
-    if makeelement is None:
-        makeelement = html.html_parser.makeelement
+    """Parse a file into an ElemenTree using the BeautifulSoup parser.
+
+    You can pass a different BeautifulSoup parser through the
+    `beautifulsoup` keyword, and a diffent Element factory function
+    through the `makeelement` keyword.  By default, the standard
+    ``BeautifulSoup`` class and the default factory of `lxml.html` are
+    used.
+    """
     if not hasattr(file, 'read'):
         file = open(file)
-    tree = beautifulsoup(file)
-    root = _convert_tree(tree, makeelement)
-    # from ET: wrap the document in a html root element, if necessary
-    if len(root) == 1 and root[0].tag == "html":
-        return root[0]
-    root.tag = "html"
-    return root
+    root = _parse(file, beautifulsoup, makeelement)
+    return etree.ElementTree(root)
 
 def convert_tree(beautiful_soup_tree, makeelement=None):
+    """Convert a BeautifulSoup tree to a list of Element trees.
+
+    Returns a list instead of a single root Element to support
+    HTML-like soup with more than one root element.
+
+    You can pass a different Element factory through the `makeelement`
+    keyword.
+    """
     if makeelement is None:
         makeelement = html.html_parser.makeelement
     root = _convert_tree(beautiful_soup_tree, makeelement)
@@ -34,6 +55,19 @@ def convert_tree(beautiful_soup_tree, makeelement=None):
 
 
 # helpers
+
+def _parse(source, beautifulsoup, makeelement):
+    if beautifulsoup is None:
+        beautifulsoup = BeautifulSoup
+    if makeelement is None:
+        makeelement = html.html_parser.makeelement
+    tree = beautifulsoup(source)
+    root = _convert_tree(tree, makeelement)
+    # from ET: wrap the document in a html root element, if necessary
+    if len(root) == 1 and root[0].tag == "html":
+        return root[0]
+    root.tag = "html"
+    return root
 
 def _convert_tree(beautiful_soup_tree, makeelement):
     root = makeelement(beautiful_soup_tree.name,
