@@ -17,6 +17,10 @@ Bugs fixed
 Other changes
 -------------
 
+* ``lxml.html.ElementSoup`` was replaced by a new module
+  ``lxml.html.soupparser`` with a more consistent API.  The old module
+  remains for compatibility with ElementTree's own ElementSoup module.
+
 * Setting the XSLT_CONFIG and XML2_CONFIG environment variables at
   build time will let setup.py pick up the ``xml2-config`` and
   ``xslt-config`` scripts from the supplied path name.
